# idk_platform

./: CMakeLists.txt  README.md
h/idk/: platform.hpp
h/idk/platform/: controller.hpp  input.hpp  platform.hpp  platform_sdl3.hpp  window_sdl3.hpp
src/: platform.cpp  platform_sdl3.cpp  window_sdl3.cpp
